--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@tanstack/vue-query": "^5.59.13",
     "@tanstack/vue-query-devtools": "^5.59.13",
+    "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "pinia": "^2.2.4",
     "vue": "^3.5.11",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
