--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "pinia": "^2.2.4",
+    "vee-validate": "^4.13.2",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
