--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.13",
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.28.0",
     "jsdom": "^25.0.1",
