--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
+    "axios-mock-adapter": "^2.1.0",
     "daisyui": "^4.12.13",
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.28.0",
